--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <p>1111</p>
         <p id="dscrptn">SCHEME PHOTOS DESCRIPTION</p>
         <p id="swordname">Damascus Sword</p>
-        <P id = "swordsr">Handmade celtic sword with etching<br>Redwood handle, lightweight</P>
-        <P id="prc">$128</P>
-        <P id="btn"><b>BUY NOW</b></P>
+        <p id = "swordsr">Handmade celtic sword with etching<br>Redwood handle, lightweight</p>
+        <p id="prc">$128</p>
+        <p id="btn"><b>BUY NOW</b></p>
     </body>
     
 </html>
