--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     
     <head>
-        <script src="https://use.typekit.net/cbo4sji.js"></script>
-        <script>try{Typekit.load({ async: true });}catch(e){}</script>
+        <script src="https://use.typekit.net/cfp7dcc.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>GETTING STARTED WITH BRACKETS</title>
@@ -18,7 +18,6 @@
         <p id = "swordsr">Handmade celtic sword with etching<br>Redwood handle, lightweight</p>
         <p id="prc">$128</p>
         <p id="btn"><b>BUY NOW</b></p>
-        <p>Hello Volf!</p>
     </body>
     
 </html>
